--- a/sdk/UI/custom.css
+++ b/sdk/UI/custom.css
@@ -70,7 +70,7 @@
 
 /* -------------------user message------------- */
 .kore-chat-window ul.chat-container li.fromCurrentUser .messageBubble {
-    background-color: #d3d5d5 !important;
+    background-color: #9fa2a2 !important;
     font-size: 15px !important;
     font-weight: 400 !important;
 
